--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,6 +67,7 @@ jobs:
         run: |
           cargo run --manifest-path ./bench/tools/Cargo.toml --bin build_benchmark_jsons
           cd gh-pages
+          git pull
           git config user.name "tauri-bench"
           git config user.email "gh.tauribot@gmail.com"
           git add .
