--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,12 +30,20 @@ jobs:
           toolchain: stable
           target: ${{ matrix.platform.target }}
 
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+          architecture: x64
+
       - name: install xvfb and hyperfine (bench only)
         if: matrix.platform.kind == 'bench'
         run: |
+          python -m pip install --upgrade pip
           sudo apt-get install -y xvfb
           wget https://github.com/sharkdp/hyperfine/releases/download/v1.11.0/hyperfine_1.11.0_amd64.deb
           sudo dpkg -i hyperfine_1.11.0_amd64.deb
+          pip install memory_profiler
 
       - name: build electron hello_world
         if: matrix.platform.kind == 'bench'
